actually fixed footer, and got rid of redudant code wrapped around the cards div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,15 +38,12 @@ body {
 	flex: 1;
 }
 
-.content {
-	flex: 1;
-	padding: 1em;
-}
-
 .cards {
 	flex-direction: column;
 	display: flex;
 	gap: 10px;
+	flex: 1;
+	padding: 1em;
 }
 
 .card {
@@ -89,7 +86,6 @@ body {
 	font-size: var(--fontxl);
 	border-radius: 8px;
 	height: 100px;
-	flex: 1;
 	min-width: 200px;
 	display: flex;
 	justify-content: center;
@@ -98,7 +94,7 @@ body {
 }
 
 .icon {
-	width: 25px;
+	width: 20px;
 }
 
 .footer {
@@ -108,13 +104,14 @@ body {
 	padding: 1.5rem;
 	font-family: var(--ff);
 	font-size: var(--fontmd);
+	bottom: 0;
 }
 
 .nav {
 	background-color: var(--tertiaryaccent);
 	color: var(--white);
 	text-align: center;
-	padding: 1.5rem;
+	padding: 1rem;
 	position: relative;
 	top: 0;
 	width: 100%;
@@ -123,7 +120,6 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex: 1;
 	flex-wrap: wrap;
 }
 
